src/stylesheets/base.scss
@import 'colors';
@import 'fonts';
@import 'tip';
@import 'form';
@import 'error';
@import 'header';
@import 'screen';
@import "techRadar";
@import "~bootstrap/scss/bootstrap";

div.legend {
  font-size: 90%;
  margin: 0 0 20px 0;
}

@media print {

  a:after {
    content: " <" attr(href) "> ";
    font-size: 0.8em;
    font-weight: normal;
  }

  #radar-plot {
    display: none;
  }

  .quadrant-table {
    .quadrant-table__name {
      display: block;
      font-size: 30pt;
      padding: 0 10px;
      margin-bottom: 20px;
    }

    &.first .quadrant-table__name {
      color: $green;
    }

    &.second .quadrant-table__name {
      color: $blue;
    }

    &.third .quadrant-table__name {
      color: $orange;
    }

    &.fourth .quadrant-table__name {
      color: $violet;
    }
  }

  .quadrant-table {
    page-break-after: always;

    ul {
      list-style: none;
      padding: 0;
      margin: 0;
    }

    li {
      page-break-inside: avoid;
    }


    h3 {

      page-break-before: always;
      padding: 0 10px;
      text-transform: uppercase;
      font-size: 18pt;
      font-weight: bold;

    }

    h2 + h3 {
      page-break-before: avoid;
    }
  }

  .blip-list-item {
    font-weight: bold;
  }

  .blip-item-description {
    padding: 0 15px;
  }

  header {
    text-align: left;

    .radar-title .radar-title__text {
      font-size: 40px;
      width: 100%;
      padding: 10px;
      display: block;
    }

    .radar-title .radar-title__logo {
      display: block;
      width: auto;

      a {
        padding: 40px 10px 0;
        display: block;

        &::after {
          display: none;
        }
      }

      img {
        max-width: 150px;
      }
    }

    .buttons-group {
      display: none;
    }

    #alternative-buttons {
      display: none;
    }

    .print-radar {
      display: none;
    }
  }

  .error-container {
    display: none;
  }
}

@media screen {

  #radar {
    margin: 0 auto 50px auto;
    position: relative;

    svg#radar-plot {
      margin: 0 auto;
      transition: all 1s ease;
      position: absolute;
      left: 0;
      right: 0;

      .legend {
        visibility: hidden;
        transition: visibility 1s ease 1s;
        color: $black;
      }

      path {
        &.ring-arc-3 {
          stroke: none;
          fill: $grey-light;
        }

        &.ring-arc-2 {
          stroke: none;
          fill: $grey;
        }

        &.ring-arc-1 {
          stroke: none;
          fill: $grey-dark;
        }

        &.ring-arc-0 {
          stroke: none;
          fill: $grey-darkest;
        }
      }

      .blip-link {
        text-decoration: none;
        cursor: pointer;
      }

      .quadrant-group {
        cursor: pointer;
      }

      circle, polygon, path {
        &.first {
          fill: $green;
          stroke: none;
        }

        &.second {
          fill: $blue;
          stroke: none;
        }

        &.third {
          fill: $orange;
          stroke: none;
        }

        &.fourth {
          fill: $violet;
          stroke: none;
        }
      }

      line {
        stroke: white;
      }

      text {
        &.blip-text {
          font-size: 9px;
          font-style: italic;
          fill: $white;
        }

        &.line-text {
          font-weight: bold;
          text-transform: uppercase;
          fill: $black;
          font-size: 12px;
        }
      }
    }

    div.quadrant-table {
      z-index: 1;

      .quadrant-table__name {
        display: none;
      }

      max-height: 0;
      max-width: 0;
      position: absolute;
      overflow: hidden;

      transition: max-height 0.5s ease 1s;

      h3 {
        text-transform: uppercase;
        font-size: $baseFont;
        margin: 0;
        font-weight: bold;
      }

      h4 {
        text-transform: uppercase;
        font-size: 90%;
        margin: 0;
        font-weight: bold;
      }

      &.first {
        &.selected {
          float: right;
        }

        ul {
          li {
            .blip-list-item {
              &.highlight2 {
                i {
                  background-color: $green;
                  color: white;
                }

                background-color: $green;
                color: white;
              }
            }
          }
        }
      }

      &.second {
        &.selected {
          float: left;
        }

        ul {
          li {
            .blip-list-item {
              &.highlight2 {
                i {
                  background-color: $blue;
                  color: white;
                }

                background-color: $blue;
                color: white;
              }
            }
          }
        }
      }

      &.third {
        &.selected {
          float: left;
        }

        ul {
          li {
            .blip-list-item {
              &.highlight2 {
                i {
                  background-color: $orange;
                  color: white;
                }

                background-color: $orange;
                color: white;
              }
            }
          }
        }
      }

      &.fourth {
        &.selected {
          float: right;
        }

        ul {
          li {
            .blip-list-item {
              &.highlight2 {
                i {
                  background-color: $violet;
                  color: white;
                }

                background-color: $violet;
                color: white;
              }
            }
          }
        }
      }

      &.selected {
        position: relative;
        max-height: 10000px;
        max-width: 40%;
      }

      ul {
        padding: 0;
        margin-left: 0;

        li {
          list-style-type: none;
          padding-left: 0;

          .blip-list-item {
            padding: 2px 5px;
            border-radius: 2px;
            cursor: pointer;
            font-size: 90%;
            font-weight: 400;
            line-height: 1.2;

            &.highlight {
              color: white;
              background-color: rgba(0, 0, 0, 0.8);
            }
          }

          .blip-item-description {
            max-height: 0;
            overflow: hidden;
            width: 300px;

            p {
              margin: 0;
              border-bottom: 1px solid rgb(119, 119, 119);
              padding: 20px;
              color: $grey-text;
              font-size: 90%;
              line-height: 1.2;

              a {
                color: #007bff;

                &:hover {
                  color: #0056b3;
                }
              }
            }

            transition: max-height 0.2s ease;

            &.expanded {
              transition: max-height 0.5s ease 0.2s;
              max-height: 1000px;
            }
          }
        }
      }
    }
  }

  .share-btn {
    background: url("../images/share.svg") no-repeat center;
    float: right;
  }

  .tooltip > .tooltip-inner {
    padding: 1% 1% 1% 1%;
    max-width: content-box;
    min-width: auto;
  }

  .oldTech {
    color: gray;

    &.expanded {
      color: white;
    }
  }
}

